# jobs-agent-python

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scratch_test.py
.github/workflows/: jobs-agent.yml
app/: batch.py  config.py  logging.py  main.py  models.py  notify_email.py  notify_telegram.py  runner.py  scoring.py  store.py
app/scrapers/: apec.py  base.py  hellowork.py  wttj.py
data/: jobs.db
docs/: architecture.md  debug-et-bonnes-pratiques.md  developpement-local.md  production-github-actions.md  roadmap.md
state/: jobs.json
